2007-04-15  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.*,
	* gameswf/gameswf_as_sprite.cpp,
	* gameswf/as_classes/as_mcloader.*:
	Has recollected that target may be both string and pointer.
	load_file() function moved to struct as_environment(), so is more correct.
	Something has simplified.

2007-04-15  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_impl.cpp,
	* gameswf/gameswf_test_ogl.cpp:
	fixed one of the memory leaks bug

2007-04-14  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/as_classes/as_mcloader.*: implemented MovieClipLoader.unloadClip() method
	* gameswf/gameswf_button.cpp: fixed bug arising during loadMovie()
	* gameswf/gameswf_impl.cpp: added memory leaks debuging code
	* gameswf/gameswf_sprite.cpp,
	* gameswf/gameswf_movie_def.cpp: added misc printf
	* gameswf/gameswf_movie.: character id may be -1 (case of loadMovie())
	* base/tu_opengl_includes.h: PROC_NAME_PREFIX is missing for WIN32
	there are memory leaks bug arising after loadMovie(), will be fixed later

2007-04-14  Thatcher Ulrich <tu@tulrich.com>

	* demos/posterize/*: a small program for posterizing
	images (i.e. reducing to a small number of output colors, for a
	graphic effect or to prepare for silkscreening)
	
2007-04-14  Thatcher Ulrich <tu@tulrich.com>

	* gameswf_test_ogl.h, gameswf.h, gameswf/Makefile, as_xml.cpp,
	  config:
	misc compile fixes for msvc + Makefiles.
	* tu_opengl_includes.h:
	compile fix -- just include <windows.h>.  It's too hard to keep
	faking the windows headers.
	* base/png_helper.*:
	added write_rgba() helper function
	* base/ear_clip_triangulate_impl.h:
	catch and work around a degenerate case

2007-04-14  Vitaly Alexeev <tishka92@yahoo.com>

	* a lot of files:
	implemented unloadMovie() function
	removed useless delete_unused_root() stuff

2007-04-14  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_button.cpp: fixed bug
	(a button may be the sprite's parent therefore it should call execute_frame_tags(0))
